syntax = "proto3";

package tech.gklijs.kgpoc;
import "address.proto";

message AddressUpdate {
  string country = 1;
  repeated string persons = 2;
  repeated .tech.gklijs.kgpoc.Address addresses = 3;
}